[package]
name = "ferne"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
clap = { version = "4.5.8", features = ["derive"] }
handlebars = "5.1.2"
markdown = "1.0.0-alpha.17"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
